--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 
 body{
-    background-color: blueviolet;
+    background-color: #1fc4f7;
 }
 
 
@@ -20,52 +20,64 @@ li{
 }
 
 
-
-
-
-.home_screen{
-    margin: 17vh;
+.initial_page{
+    width: 100%;
+    height: 0;
 }
 
-.nome{
-    font-size: 50px;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+.atom_icon{
+    max-width: 63px;
+    height: 64px;
+    width: 100%;
+    background: #000000;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+
+.align_center{
+    width: 100%;
+    text-align: center;
+}
+
+.access_content{
+    padding: 30px 40px 30px 40px;
+    background: #000000;
+    border-radius: 30px;
+    font-size: 25px;
     color: white;
 }
+
+
+.transition_buttom :hover{
+    background-color: #0a2d2e;
+}
+
+
 
 .about{
-    font-size: 30px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: white;
-}
-
-.menu_box{
-    background-color: rgba(0, 5, 26, 0.7);
-    height: 40vh;
-    max-width: 25vh;
-    border-radius: 10px;
-    opacity: 0;
-}
-
-.transition_main{
+    width: 100%;
+    padding-top: 120px;
+    padding-bottom: 120px;
     display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-around;
+
+}
+
+.explicacao{
+    max-width: 40%;
+    background-color: rgba(0, 5, 26, 0.7);
+    border-radius: 20px;
+    padding: 10px;
+}
+
+.content{
+    font-size: 30px;
+}
+
+.tema{
+    font-size: 50px;
     text-align: center;
-    height: 100%;
 }
-
-.transition_opition{
-    padding-top: 5px;
-    margin-bottom: 10px;
-}
-
-
-
-.themes :hover{
-    color: white;
-}
-
 
 
 
@@ -83,56 +95,66 @@ li{
 }
 
 .logo{
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color: white;
-    font-size: 40px;
+    height: 50px;
 }
 
 .main_menu{
     display: flex;
     flex-direction: row;
-    font-size: 20px;
-    padding-top: 15px;
+    font-size: 30px;
 }
 
 .opition_nav{
-    padding-right: 30px;
-    padding-left: 30px;
+    margin-right: 30px;
+    margin-left: 30px;
+    font-size: 20px;
+    color: white;
+}
+
+.border_bottom{
+    margin: 5px 10px 5px 10px;
+}
+
+.border_bottom :hover{
+    border-bottom: solid;
 }
 
 
 
-.content_area{
+
+
+
+.sections{
+    transform: translateX(-110%);
+    margin-left: 1%;
+    margin-right: 1%;
     height: 85vh;
-    background-color: aqua;
-    bottom: 100%;
-    margin-left: 10%;
-    margin-right: 10%;
+    background-color: rgba(0, 5, 26, 0.7);
+    border-radius: 20px;
 }
 
 
 
 
-.active{
-    opacity: 1;
-    transition: 0.3s;
-}
 
-.transparent{
-    opacity: 0;
-    transition: 0.3s;
+
+
+
+.transition_main{
+    transform: translateY(3%);
+    transition: 1s;
 }
 
 .transition_opitions{
     transform: translateY(0%);
-    transition: 0.5s;
+    transition: 1s;
 }
 
 .add_transition{
-    transition: 0.5s;
+    transform: translateX(100%);
+    overflow: hidden;
 }
 
-.select_opition{
+.border{
     border-bottom: solid;
-    color: white;
 }
