--- a/style.css
+++ b/style.css
@@ -25,60 +25,92 @@ li{
     height: 0;
 }
 
-.atom_icon{
-    max-width: 63px;
-    height: 64px;
-    width: 100%;
-    background: #000000;
-    border-radius: 50%;
-    margin: 0 auto;
-}
+
 
 .align_center{
-    width: 100%;
+    margin-top: 100px;
     text-align: center;
 }
 
 .access_content{
     padding: 30px 40px 30px 40px;
-    background: #000000;
+    background-color: #30696c;
     border-radius: 30px;
     font-size: 25px;
-    color: white;
+    color: rgb(172, 239, 235);
 }
+
 
 
 .transition_buttom :hover{
-    background-color: #0a2d2e;
+    background-color: #143f41;
 }
+
+
+
 
 
 
 .about{
     width: 100%;
-    padding-top: 120px;
-    padding-bottom: 120px;
     display: flex;
     justify-content: space-around;
-
 }
 
-.explicacao{
-    max-width: 40%;
+.explanation{
+    max-width: 100%;
     background-color: rgba(0, 5, 26, 0.7);
-    border-radius: 20px;
+    height: 50vh;
     padding: 10px;
 }
 
-.content{
+.main_text{
     font-size: 30px;
+    line-height: 50px;
+    font-family: 'Courier New', Courier, monospace;
+    color: bisque;
 }
 
 .tema{
     font-size: 50px;
     text-align: center;
+    color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+.logo{
+    height: 100px;
+    padding: 20px;
+}
+
+.about_content{
+    text-align: center;
+    margin-top: 7vh;
+    height: 35vh;
+    width: 35vh;
+    background-color: rgba(0, 5, 26, 0.7);
+    border-radius: 20px;
+    box-shadow: 10px 5px 5px black;
+    padding: 0px 20px 0px 20px;
+}
+
+.preview_content{
+    text-align: center;
+    padding-left: 15%;
+    padding-right: 15%;
+}
+
+.title{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 25px;
+    color: rgb(201, 225, 228);
+}
+
+.content{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 20px;
+    color: rgb(43, 142, 185);
+}
 
 
 
@@ -94,8 +126,8 @@ li{
     transform: translateY(-100%);
 }
 
-.logo{
-    height: 50px;
+.logo_header{
+    height: 55px;
 }
 
 .main_menu{
@@ -142,12 +174,12 @@ li{
 
 .transition_main{
     transform: translateY(3%);
-    transition: 1s;
+    transition: 0.5s;
 }
 
 .transition_opitions{
     transform: translateY(0%);
-    transition: 1s;
+    transition: 0.5s;
 }
 
 .add_transition{
@@ -158,3 +190,8 @@ li{
 .border{
     border-bottom: solid;
 }
+
+
+
+
+
