--- a/style.css
+++ b/style.css
@@ -28,8 +28,9 @@ li{
 
 
 .align_center{
-    margin-top: 100px;
+    position: relative;
     text-align: center;
+    top: 100px;
 }
 
 .access_content{
@@ -108,7 +109,7 @@ li{
 
 .content{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 20px;
+    font-size: 15px;
     color: rgb(43, 142, 185);
 }
 
