--- a/style.css
+++ b/style.css
@@ -27,11 +27,6 @@ li{
 
 
 
-.align_center{
-    position: relative;
-    text-align: center;
-    top: 100px;
-}
 
 .access_content{
     padding: 30px 40px 30px 40px;
@@ -61,8 +56,7 @@ li{
 .explanation{
     max-width: 100%;
     background-color: rgba(0, 5, 26, 0.7);
-    height: 50vh;
-    padding: 10px;
+    padding: 100px;
 }
 
 .main_text{
@@ -80,19 +74,24 @@ li{
 }
 
 .logo{
-    height: 100px;
+    width: 100px;
     padding: 20px;
 }
 
 .about_content{
     text-align: center;
     margin-top: 7vh;
-    height: 35vh;
-    width: 35vh;
+    margin-left: 100px;
+    margin-right: 150px;
     background-color: rgba(0, 5, 26, 0.7);
     border-radius: 20px;
-    box-shadow: 10px 5px 5px black;
-    padding: 0px 20px 0px 20px;
+    box-shadow: 10px 5px 5px rgb(16, 27, 32);
+    padding: 0px 20px 60px 20px;
+}
+
+.about_content:hover{
+    box-shadow: 15px 15px 15px rgb(11, 189, 225);
+    transition: 0.75s;
 }
 
 .preview_content{
@@ -128,7 +127,7 @@ li{
 }
 
 .logo_header{
-    height: 55px;
+    width: 55px;
 }
 
 .main_menu{
