--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ li{
     border-radius: 20px;
     box-shadow: 10px 5px 5px rgb(6, 10, 12);
     padding: 0px 20px 60px 20px;
+    cursor: pointer;
 }
 
 .about_content:hover{
